# ebacoli

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Readme.md  Readme.org  ebacoli.env  makefile
examples/: CMakeLists.txt  Readme.md  Readme.org  makefile
examples/TOMS/CDM/: Readme.org  TEMPLATE_driver-CDM-frameoutput.f95  makefile  plot_all_bsplines.py  plot_header.py  plot_heatmap_from_Bsplines.py  submit.sh
examples/TOMS/CSRM/: Readme.org  driver-CSRM-frameoutput.f95  makefile  plot_all_bsplines.py  plot_heatmap_from_Bsplines.py
examples/TOMS/TTP/: Readme.md  Readme.org  driver-TTP_monodomain-frameoutput.f95  makefile  plot_all_bsplines.py  plot_heatmap_from_Bsplines.py  save_Bspline_movie.sh
examples/colbeck/: CMakeLists.txt  colbeck.f  colbeck_codegen.maple  colbeck_codegen.output  colbeck_ns.f  driver-colbeck-frameoutput.f95
examples/extended/: CMakeLists.txt  FHN2_monodomain.f  Readme.md  Readme.org  driver-CDM-simple.f95  driver-CDM-trimesh.f95  driver-FHN2_monodomain-simple.f95  driver-FHN2_monodomain-trimesh.f95  driver-FHN_monodomain-simple.f95  driver-FHN_monodomain-trimesh.f95  driver-concrete-simple.f95  driver-rabid-trimesh.f95  driver-toy-simple.f95  driver-toy-trimesh.f95  driver-toy2-simple.f95  driver-toy2-trimesh.f95  driver-toy3-simple.f95  makefile  test-app-driver.f95  test-app.f  toy.f  toy2.f  toy3.f
examples/extended/TenTusscher/: CMakeLists.txt  Readme.org  driver-TT_monodomain-simple.f95  driver-TT_monodomain-trimesh.f95  f_d_COL11.f  f_d_COL17.f  f_d_COL18.f  f_d_COL5.f  f_d_COL6.f  makefile
examples/extended2/: CMakeLists.txt  FHN2_bidomain.f  Readme.md  driver-FHN2_bidomain-simple.f95  driver-FHN2_bidomain-trimesh.f95
examples/movie/: CMakeLists.txt  Readme.org  driver-CDM-frameoutput.f95  makefile  plot_all_bsplines.py  plot_heatmap_from_Bsplines.py  submit.sh
examples/par/: CMakeLists.txt  Readme.md  driver95-curve.F95  driver95-simple.F95  driver95-trimesh.F95  rcdsys.F  runtest.sh
examples/par-ellip/: CMakeLists.txt
examples/par-ellip/chemotaxis-singular/: CMakeLists.txt  chemotaxis-singular.f  driver-chemotaxis-singular-simple.f95
examples/par-ode/: CMakeLists.txt  FHN_monodomain.f  Readme.md
examples/par-ode-ellip/: CMakeLists.txt  basic_system.f  driver-basic-simple.f95
examples/par-ode-ellip/FHN_bidomain/: CMakeLists.txt  FHN_bidomain.f  driver-FHN_bidomain-trimesh.f95  driver-FHN_bidomainx2-trimesh.f95
examples/par-ode-ellip/FHN_bidomainx2/: CMakeLists.txt  FHN_bidomainx2.f
examples/par-ode/CDM/: CDM.f  CMakeLists.txt  driver-CDM-trimesh.f95
examples/par-ode/FHN/: CMakeLists.txt  FHN_monodomain.f  Readme.md  driver-FHN_monodomain-frameoutput.f95  driver-FHN_monodomain-simple.f95  driver-FHN_monodomain-trimesh.f95  generate_sample_spatial_points.py  nice_plots_header.py  plot_all_bsplines.py  sample_bsplines_at_discrete_points.py
examples/par-ode/FHN2/: CMakeLists.txt
examples/par-ode/TenTusscher/: CMakeLists.txt  TT_ebacoli.f  TenTusscher.f  driver-TT_monodomain-trimesh.f95  f_d_COL10.f  f_d_COL13.f  f_d_COL15.f  f_d_COL19.f  f_d_COL2.f  f_d_COL3.f  f_d_COL9.f
examples/par-ode/rabid/: CMakeLists.txt  driver-rabid-trimesh.f95  rabid.f
examples/par/cahn_allen/: CMakeLists.txt  cahn_allen.F  driver95-simple.F95
examples/par/chemotaxis-nonsingular/: CMakeLists.txt  chemotaxis-nonsingular.f  driver-chemotaxis-nonsingular-simple.f95
examples/par/rcdsys/: CMakeLists.txt  driver95-trimesh.F95
examples/par/richards/: CMakeLists.txt  README  driver-richards-frameoutput.f95  nice_plots_header.py  richards.f  richards_codegen.maple  richards_codegen.output
examples/par/richards-celia/: CMakeLists.txt  Makefile  driver-richards-frameoutput.f95  plot_all_bsplines.py
examples/par/richards/miller/: driver-miller-frameoutput.f95  miller.f  miller_codegen.maple  miller_codegen.output  plot_all_bsplines.py  run_plot_store.sh
examples/par/richards/vanderborght/: CMakeLists.txt  driver-vanderborght-frameoutput.f95  plot_heatmap_from_bsplines.py  vanderborght.f
examples/standard/: CMakeLists.txt  Readme.md  Readme.org  burg1.F  burg2.F  driver95-curve.F95  driver95-simple.F95  driver95-trimesh.F95  makefile  steady.F
examples/standard/output/exact_jac/: burg1-curve.out  burg1-curve_Bsplines.out  burg1-simple.out  burg2-curve.out  burg2-curve_Bsplines.out  burg2-trimesh_Points1.out  cahn_allen-curve.out  cahn_allen-curve_Bsplines.out  cahn_allen-trimesh.out  cahn_allen-trimesh_Points1.out  rcdsys-curve.out  rcdsys-trimesh_Points1.out  rcdsys-trimesh_Points2.out  rcdsys-trimesh_Points4.out  steady-curve.out  steady-trimesh.out
lib/python/: abdtools.py  colors.py  ebacoli.py
media/: Readme.org
src/: CMakeLists.txt  DASUM.f  Readme.org  abdtools.f  condcolrow.f  condcolrowmax.f  d1mach_i1mach.f95  ebacoli-aux.f  ebacoli.f  ebacoli95.f95  makefile  utilities.f95
tests/: CMakeLists.txt  Readme.md  test_burg1.f95  test_burg1_plus_w_zero.f95  test_burg2.f95  test_sincmads.f95  test_toy2_par_plus_ode.f95  test_toy3_par_plus_ode.f95  test_toy_par_plus_ode.f95  utilities.f95
tests/par/: CMakeLists.txt  Readme.md
tests/par-ellip/: CMakeLists.txt  Readme.md  burg1_plus_w_zero.f  utilities.f95
tests/par-ellip/toy01-pe/: CMakeLists.txt  toy01-pe.f
tests/par-ellip/toy02-pe/: CMakeLists.txt  test_toy02-pe.f95  toy02-pe.f
tests/par-ellip/toy03-pe/: CMakeLists.txt  test_toy03-pe.f95  toy03-pe.f
tests/par-ode/: CMakeLists.txt  Readme.md
tests/par-ode-ellip/: CMakeLists.txt  Readme.md
tests/par-ode-ellip/test01-poe/: CMakeLists.txt  test_toy01-poe.f95  toy01-poe.f
tests/par-ode-ellip/test02-poe/: CMakeLists.txt  toy02-poe.f
tests/par-ode-ellip/test05-poe/: CMakeLists.txt  latexmkrc  test_toy05-poe.f95  toy05-poe.f  toy05_system.tex
tests/par-ode/toy01-po/: CMakeLists.txt  test_toy01-po.f95
tests/par-ode/toy02-po/: CMakeLists.txt  test_toy02-po.f95  utilities.f95
tests/par-ode/toy03-po/: CMakeLists.txt
tests/par/burg1/: CMakeLists.txt  burg1.f  test_burg1.f95
tests/par/burg2/: CMakeLists.txt  burg2.f  test_burg2.f95
tests/par/sincmads/: CMakeLists.txt  sincmads.f
(+28 files in other folders)
